# joeflow

./: .checks.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  README.rst  linter-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  reversion.yml  tests.yml
docs/: commands.rst  conf.py  core_components.rst  inbox.rst  index.rst  settings.rst  spelling_wordlist.txt  tasks.rst  urls.rst
docs/tutorial/: index.rst  process.rst  templates.rst  testing.rst  workflow.rst
galahad/: __init__.py  admin.py  apps.py  celery.py  conf.py  locking.py  models.py  utils.py  views.py
galahad/contrib/: reversion.py
galahad/management/commands/: render_process_graph.py
galahad/migrations/: 0001_initial.py
galahad/tasks/: __init__.py  human.py  machine.py
joeflow/: __init__.py  admin.py  apps.py  celery.py  conf.py  forms.py  locking.py  mermaid_utils.py  models.py  typing.py  utils.py  views.py
joeflow/contrib/: reversion.py
joeflow/management/commands/: render_process_graph.py  render_workflow_graph.py
joeflow/migrations/: 0001_initial.py
joeflow/runner/: celery.py  dramatiq.py
joeflow/tasks/: __init__.py  human.py  machine.py
joeflow/templates/admin/: change_form.html
tests/: conftest.py  test_admin.py  test_docs.py  test_forms.py  test_integration.py  test_locking.py  test_models.py  test_utils.py  test_views.py
tests/commands/: test_render_process_graph.py  test_render_workflow_graph.py
tests/fixtures/: simpleprocess_instance.dot  simpleprocess_instance_manual_override.dot  simpleprocess_instance_obsolete.dot  simpleprocess_instance_override.dot  simpleworkflow.dot  simpleworkflow.mmd  simpleworkflow_instance.dot  simpleworkflow_instance.mmd
tests/tasks/: test_human.py  test_machine.py
tests/testapp/: __init__.py  admin.py  celery_app.py  manage.py  models.py  settings.py  urls.py  views.py  workflows.py  wsgi.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/templates/django/forms/widgets/: input.html  select.html  textarea.html
tests/testapp/templates/testapp/: base.html  process_detail.html  process_form.html  workflow_detail.html  workflow_form.html
