[metadata]
name = joeflow
description = The lean workflow automation framework for machines with heart
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Johannes Hoppe
author-email = info@johanneshoppe.com
license = BSD
home-page = https://github.com/codingjoe/joeflow
# Find more classifiers here:
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 1 - Planning
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Home Automation
    Topic :: Internet
    Topic :: Office/Business
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Office/Business :: Financial :: Point-Of-Sale
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development
keywords =
    django
    process
    automation
    workflow
    framework
    task

tests_require =
    pytest
    pytest-django

[files]
packages =
    joeflow

[extras]
reversion =
    django-reversion

[aliases]
test = pytest

[pbr]
skip_authors = true
skip_changelog = true

[build_sphinx]
source-dir = docs
build-dir = docs/_build
project = joeflow
copyright = 2018, Johannes Hoppe

[tool:pytest]
addopts = --tb=short -rxs --strict
DJANGO_SETTINGS_MODULE = tests.testapp.settings

[pydocstyle]
add_ignore = D1
match_dir = (?!tests|env|docs|\.).*
match = (?!setup).*.py

[flake8]
max-line-length = 99
