[metadata]
name = joeflow
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = The lean workflow automation framework for machines with heart
long_description = file: README.rst
license = BSD
license_file = LICENSE
url = https://github.com/codingjoe/joeflow
# Find more classifiers here:
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 1 - Planning
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Home Automation
    Topic :: Internet
    Topic :: Office/Business
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Office/Business :: Financial :: Point-Of-Sale
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development
keywords =
    django
    process
    automation
    workflow
    framework
    task

[options]
include_package_data = True
packages = joeflow
install_requires =
    django>=2.0
    django-appconf
    celery>=4.0.0
    redis
    graphviz
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-django

[options.extras_require]
test =
    pytest
    pytest-django

reversion =
    django-reversion

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
project = joeflow
copyright = 2018, Johannes Hoppe

[tool:pytest]
addopts = --tb=short -rxs --strict
DJANGO_SETTINGS_MODULE = tests.testapp.settings

[pydocstyle]
add_ignore = D1
match_dir = (?!tests|env|docs|\.).*
match = (?!setup).*.py

[flake8]
ignore = E731
max-line-length = 88
exclude = joeflow/migrations/*

[tox:tox]
envlist = py{35,36,37}-dj{20,21,master},docs,reversion
basepython = python3.7

[testenv]
deps=
    coverage
    -e.[test]
    dj20: https://github.com/django/django/archive/stable/2.0.x.tar.gz#egg=django
    dj21: https://github.com/django/django/archive/stable/2.1.x.tar.gz#egg=django
    djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
    reversion: django-reversion
commands=
    coverage run --source=joeflow -m 'pytest' \
        --basetemp={envtmpdir} \
        --ignore=.tox \
        {posargs}

[testenv:docs]
deps=
    sphinxcontrib-spelling
commands=python setup.py build_sphinx -W -b spelling
