[metadata]
name = joeflow
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = The lean workflow automation framework for machines with heart
long_description = file: README.rst
license = BSD
license_file = LICENSE
url = https://github.com/codingjoe/joeflow
# Find more classifiers here:
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Home Automation
    Topic :: Internet
    Topic :: Office/Business
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Office/Business :: Financial :: Point-Of-Sale
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development
keywords =
    django
    process
    automation
    workflow
    framework
    task

[options]
include_package_data = True
packages = joeflow
install_requires =
    django>=2.2
    django-appconf
    graphviz
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-django
    pytest-cov
    redis

[options.extras_require]
reversion =
    django-reversion
celery =
    celery>=4.2.0
dramatiq =
    dramatiq
    django_dramatiq
docs =
    celery>=4.2.0
    django-reversion
    dramatiq
    django_dramatiq
    redis

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
project = joeflow
copyright = 2018, Johannes Hoppe

[tool:pytest]
addopts =
    tests
    --doctest-modules
    --cov=joeflow
DJANGO_SETTINGS_MODULE = tests.testapp.settings
norecursedirs = tests/testapp
env =
    D:DRAMATIQ_BROKER = dramatiq.brokers.stub.StubBroker

[coverage:report]
show_missing = true

[pydocstyle]
add_ignore = D1
match_dir = (?!tests|env|docs|\.).*
match = (?!setup).*.py

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503, E731

[isort]
atomic = true
line_length = 88
known_first_party = joeflow, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
